--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         </div>
     
         <div class="footer-links">
-            <b><h2>Company</h2></b>
+            <h2 class="company">Company</h2>
              <a href="about.html">About</a> 
              <a href="contact.html">Contacts</a> 
              <a href="#">Terms of Service</a> 
