--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
     </div>
 
     <div class="footer-links">
-        <h2 class="company">Company</a>
+        <h2 class="company">Company</h2>
          <a href="about.html">About</a> 
          <a href="contact.html">Contacts</a> 
          <a href="">Terms of Service</a> 
